--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "bootstrap": "3",
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "2.11.2"
   }
 }
