--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.1.3",
+    "chartkick": "^3.0.1",
+    "highcharts": "^7.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^3.1.10"
   }
 }
