--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.1.3",
     "chartkick": "^3.0.1",
+    "flatpickr": "^4.5.2",
     "highcharts": "^7.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
